added silent bees

--- a/build.gradle
+++ b/build.gradle
@@ -165,6 +165,10 @@ dependencies {
     implementation "curse.maven:ender-io-64578:5771156"
     implementation "curse.maven:aquaculture-60028:5713551"
     implementation "curse.maven:dyenamics-509276:5788247"
+    implementation "curse.maven:forbidden-arcanus-309858:5795185"
+    implementation "curse.maven:valhelsia-core-416935:5526890"
+    implementation "curse.maven:actually-additions-228404:5824751"
+    implementation "curse.maven:immersive-engineering-231951:5828000"
 }
 
 tasks.withType(ProcessResources).configureEach {
